❄   Bug Fixed:  Wrong font style when loading page using jQuery AJAX, this is due to                 using Cufon lib in template which needs refresh Cufon.refresh();. ❄   Bug Fixed:  Use jQuery AJAX method to get the content of element <section id=content>                 without the tag itself. ❄   Bug Fixed:  Before associating the current clicked tab with active class check if                 it already associated with it.

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ a:hover {text-decoration:none}
 .col-1, .col-2, .col-3, .col-4  {float:left}
 .wrapper {width:100%;overflow:hidden}
 .extra-wrap {overflow:hidden}
-.bg {width:100%;background:url(../images/bg.jpg) center 0 no-repeat}
+.bg {width:100%;}
 .main {width:984px;padding:0;margin:0 auto;font-size:0.875em;line-height:1.285em}
 p {margin-bottom:18px}
 .p0 {margin-bottom:0px}
@@ -89,12 +89,41 @@ h1 {padding:0px 0 0 40px;position:relative;float:left}
 #content {width:100%;padding:10px 0 40px;background:#fff;border-radius:18px 18px 0 0;-moz-border-radius:18px 18px 0 0;-webkit-border-radius:18px 18px 0 0;position:relative;z-index:2}
 #content .padding {padding:24px 12px 0}
 .spacer-1 {width:100%;background:url(../images/pic-1.gif) 217px 0 repeat-y}
-h2 {font-size:39px;line-height:1.9em;color:#0f0f0f;margin-bottom:5px;letter-spacing:-2px}
-h3 {font-size:30px;line-height:1.3em;margin-top:-5px;letter-spacing:-2px}
-h3 strong {display:block;color:#fefefe;margin-bottom:-11px}
-h4 {font-size:23px;line-height:1.2em;color:#fefefe;letter-spacing:-1px;margin-bottom:20px}
-h5 {color:#0f0f0f;text-decoration:underline;font-weight:normal}
-h6 {color:#0f0f0f;font-weight:normal;margin-bottom:5px}
+h2 {
+    font-size:39px;
+    line-height:1.9em;
+    color:  #0f0f0f;
+    margin-bottom:5px;
+    letter-spacing:-2px;
+}
+h3 {
+    font-size:30px;
+    line-height:1.3em;
+    margin-top:-5px;
+    letter-spacing:-2px
+}
+h3 strong {
+    display:block;
+    color:#fefefe;
+    margin-bottom:-11px;
+}
+h4 {
+    font-size:23px;
+    line-height:1.2em;
+    color:#fefefe;
+    letter-spacing:-1px;
+    margin-bottom:20px
+}
+h5 {
+    color:#0f0f0f;
+    text-decoration:underline;
+    font-weight:normal
+}
+h6 {
+    color:#0f0f0f;
+    font-weight:normal;
+    margin-bottom:5px
+}
 .border-bot {width:100%;padding-bottom:20px;background:url(../images/pic-1.gif) 0 bottom repeat-x}
 .box-bg {padding:33px;background:#e4e4e4}
 .box {width:100%;background:url(../images/box.png) center 0 no-repeat #101010;border-radius:19px;-moz-border-radius:19px;-webkit-border-radius:19px}
